--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             position: absolute;
             width: 45px;
             height: 45px;
-            background: linear-gradient(135deg, #e63946, #c1121f);
+            background: linear-gradient(135deg, #b91c1c, #7f1d1d);
             border-radius: 50% 0 50% 0;
             left: 50%;
             top: 50%;
@@ -352,12 +352,12 @@
 
         <div class="click-hint" id="clickHint">
             <span class="arrow">👆</span>
-            <span class="hint-text">Click the flower!</span>
+            <span class="arrow">👆</span>
             <span class="arrow">👆</span>
         </div>
 
         <div class="valentine-question" id="question">
-            <p class="question-text">Will you be my Valentine?</p>
+            <p class="question-text">Pranav, will you be my Valentine?</p>
             <div class="buttons">
                 <button class="yes-btn" onclick="celebrate()">YES</button>
                 <button class="yes-btn" onclick="celebrate()">YES!</button>
